# benchmarks

./: .gitignore  README.md  test.siege
app-fastapi/: Dockerfile  db.py  main.py
app-fasthttp/: Dockerfile  README.md  docker-compose.yml
app-fastify/: Dockerfile  package-lock.json  package.json  server.js
app-rocket/: Cargo.toml  Dockerfile  Rocket.toml
app-rocket/src/: main.rs
app-spark/: Dockerfile  pom.xml
app-spark/src/main/java/it/gambuzzi/www/: App.java
app-spark/src/test/java/it/gambuzzi/www/: AppTest.java
fastapi/: README.md  pyproject.toml
fasthttp/: main.go
