[tool.poetry]
name = "fastapi_test"
version = "0.1.0"
description = ""
authors = ["Malagoli Chiara <malagoli@gbinside.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pydantic = "^1.8.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
